--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,11 @@ publish = false
 [dependencies]
 comrak = "0.6.2"
 structopt = "0.2.18"
-serde = "1.0.94"
-serde_derive = "1.0.94"
+serde = "1.0.97"
+serde_derive = "1.0.97"
 failure = "0.1.5"
 getset = "0.0.7"
+
+[profile.release]
+lto = true
+codegen-units = 1
