Add artifact upload to azure pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,3 +54,5 @@ jobs:
         tagSource: auto
         compareWith: 'lastFullRelease'
         addChangeLog: true
+        assets: $(Build.ArtifactStagingDirectory)/mdformat
+        assetUploadMode: delete
