--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,41 +8,39 @@ trigger:
 - staging
 - trying
 
-jobs:
-- job: Linux
-  pool:
-    vmImage: 'ubuntu-16.04'
-  steps:
-  - script: |
-      curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain stable
-      echo "##vso[task.setvariable variable=PATH;]$PATH:$HOME/.cargo/bin"
-    displayName: 'Install rust'
-  - script: cargo test
-    displayName: 'Run tests'
+strategy:
+  matrix:
+    windows-stable:
+      imageName: 'vs2017-win2016'
+      rustup_toolchain: stable
+    mac-stable:
+      imageName: 'macos-10.14'
+      rustup_toolchain: stable
+    linux-stable:
+      imageName: 'ubuntu-16.04'
+      rustup_toolchain: stable
 
-- job: macOS
-  pool:
-    vmImage: 'macOS-10.14'
-  steps:
-  - script: |
-      curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain stable
-      echo "##vso[task.setvariable variable=PATH;]$PATH:$HOME/.cargo/bin"
-    displayName: 'Install rust'
-  - script: cargo test
-    displayName: 'Run tests'
+pool:
+  vmImage: $(imageName)
 
-- job: Windows
-  pool:
-    vmImage: 'vs2017-win2016'
-  steps:
+steps:
+  - script: |
+      curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain $RUSTUP_TOOLCHAIN
+      echo "##vso[task.setvariable variable=PATH;]$PATH:$HOME/.cargo/bin"
+    displayName: Install rust
+    condition: ne( variables['Agent.OS'], 'Windows_NT' )
   - script: |
       curl -sSf -o rustup-init.exe https://win.rustup.rs
-      rustup-init.exe -y --default-toolchain stable
+      rustup-init.exe -y --default-toolchain %RUSTUP_TOOLCHAIN%
       echo "##vso[task.setvariable variable=PATH;]%PATH%;%USERPROFILE%\.cargo\bin"
-    displayName: 'Install rust'
-  - script: cargo test
-    displayName: 'Run tests'
+    displayName: Windows install rust
+    condition: eq( variables['Agent.OS'], 'Windows_NT' )
+  - script: cargo build --all
+    displayName: Cargo build
+  - script: cargo test --all
+    displayName: Cargo test
 
+jobs:
 - job: Plumbing
   steps:
     - task: GithubRelease@0
@@ -55,4 +53,4 @@ jobs:
         compareWith: 'lastFullRelease'
         addChangeLog: true
         assets: $(Build.ArtifactStagingDirectory)/mdformat
-        assetUploadMode: delete
+        assetUploadMode: 'replace'
