Update release strategy
Have releases be editable so that multiple assets from different targets
can be uploaded

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,7 +50,7 @@ steps:
     inputs:
       githubConnection: afnanenayetgh
       repositoryName: afnanenayet/mdformat
-      action: 'create'
+      action: 'edit'
       tagSource: auto
       compareWith: 'lastFullRelease'
       addChangeLog: true
