--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,8 +35,8 @@ steps:
       echo "##vso[task.setvariable variable=PATH;]%PATH%;%USERPROFILE%\.cargo\bin"
     displayName: Windows install rust
     condition: eq( variables['Agent.OS'], 'Windows_NT' )
-  - script: cargo build --all
-    displayName: Cargo build
+  - script: cargo build --all --release
+    displayName: Build optimized binary
   - script: cargo test --all
     displayName: Cargo test
   - task: CopyFiles@2
