--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,15 +56,21 @@ steps:
       archiveType: 'tar'
       tarCompression: 'gz'
       archiveFile: '$(Build.ArtifactStagingDirectory)/mdformat-$(target).tar.gz'
+  - bash: |
+      MY_TAG="$(Build.SourceBranch)"
+      MY_TAG=${MY_TAG#refs/tags/}
+      echo $MY_TAG
+      echo "##vso[task.setvariable variable=build.my_tag]$MY_TAG"
+    displayName: "Create tag variable"
   - task: GithubRelease@0
     displayName: 'Create Github release'
     inputs:
       githubConnection: afnanenayetgh
       repositoryName: afnanenayet/mdformat
-      tag: '$(tagName)'
+      tag: '$(build.my_tag)'
       action: 'edit'
       tagSource: auto
       compareWith: 'lastFullRelease'
       addChangeLog: true
-      assets: '$(Build.ArtifactStagingDirectory)/mdformat-$(target)'
+      assets: '$(Build.ArtifactStagingDirectory)/mdformat-$(target).tar.gz'
       assetUploadMode: 'replace'
