--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,13 +56,22 @@ steps:
       archiveType: 'tar'
       tarCompression: 'gz'
       archiveFile: '$(Build.ArtifactStagingDirectory)/mdformat-$(target).tar.gz'
+  - bash: |
+      MY_TAG="$(Build.SourceBranch)"
+      MY_TAG=${MY_TAG#refs/tags/}
+      echo $MY_TAG
+      echo "##vso[task.setvariable variable=build.my_tag]$MY_TAG"
+    displayName: "Create tag variable"
   - task: GithubRelease@0
+    condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
     displayName: 'Create Github release'
     inputs:
       githubConnection: afnanenayetgh
       repositoryName: afnanenayet/mdformat
-      action: 'create'
-      tagSource: auto
+      action: 'edit'
+      tag: '$(build.my_tag)'
+      tagSource: 'manual'
+      title: '$(build.my_tag)'
       compareWith: 'lastFullRelease'
       addChangeLog: true
       assets: '$(Build.ArtifactStagingDirectory)/mdformat-$(target).tar.gz'
