Specify that all tags should be built
Previous behavior only built on commits, we want to build on tags too

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,9 +4,10 @@
 # https://aka.ms/yaml
 
 trigger:
-- master
-- staging
-- trying
+  branches:
+    include: ['master']
+  tags:
+    include: ['*']
 
 strategy:
   matrix:
